Add JMH dependencies.